testdata/baselines/reference/submodule/conformance/jsdocParseMatchingBackticks.errors.txt
jsdocParseMatchingBackticks.js(12,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
jsdocParseMatchingBackticks.js(12,22): error TS7006: Parameter 'y' implicitly has an 'any' type.
jsdocParseMatchingBackticks.js(12,25): error TS7006: Parameter 'z' implicitly has an 'any' type.
jsdocParseMatchingBackticks.js(12,28): error TS7006: Parameter 'alpha' implicitly has an 'any' type.
jsdocParseMatchingBackticks.js(12,35): error TS7006: Parameter 'beta' implicitly has an 'any' type.
jsdocParseMatchingBackticks.js(12,41): error TS7006: Parameter 'gamma' implicitly has an 'any' type.


==== jsdocParseMatchingBackticks.js (6 errors) ====
    /**
     * `@param` initial at-param is OK in title comment
     * @param {string} x hi there `@param`
     * @param {string} y hi there `@ * param
     *                   this is the margin
     *                   so we'll drop everything before it
     `@param` @param {string} z hello???
     * `@param` @param {string} alpha hello???
     * `@ * param` @param {string} beta hello???
     * @param {string} gamma
     */
    export function f(x, y, z, alpha, beta, gamma) {
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                         ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                            ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
                               ~~~~~
!!! error TS7006: Parameter 'alpha' implicitly has an 'any' type.
                                      ~~~~
!!! error TS7006: Parameter 'beta' implicitly has an 'any' type.
                                            ~~~~~
!!! error TS7006: Parameter 'gamma' implicitly has an 'any' type.
        return x + y + z + alpha + beta + gamma
    }
    